--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <h2>Кто станет официальным лицом премии «Банк года 2020»?</h2>
           </div>
 
-          <a href="#" class="btn btn--type-2">Голосовать <span class="icon icon-arrow-right"></span></a>
+          <a href="/bg/voting-girls/" class="btn btn--type-2">Голосовать <span class="icon icon-arrow-right"></span></a>
 
           <div class="gallery__controls">
             <button role="button" aria-label="Previous" class="glider-prev" id="glider-prev"><span
@@ -515,7 +515,9 @@
         <div class="modal__close" data-js="modal-close">
           <span class="icon icon-close"></span>
         </div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/WpU3X_ZeM_A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="video-frame">
+          <iframe width="600" height="330" src="https://www.youtube.com/embed/WpU3X_ZeM_A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </div>
   </div>
 
