--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <a href="/bg/voting-girls/">Голосование</a>
               </li>
               <li>
-                <a href="">Итоги</a>
+                <a href="/bg/results/">Итоги</a>
               </li>
               <li>
-                <a href="/bg/infopartners/">Информационные партнеры</a>
+                <a href="/bg/infopartners/">Инфопартнеры</a>
               </li>
               <li>
                 <a href="/bg/contacts/">Контакты</a>
@@ -111,7 +111,7 @@
               </div>
             </div>
             <div class="countdown__btn">
-              <a href="#" class="btn btn--type-1">Голосовать<span class="icon icon-arrow-right"></span></a>
+              <a href="#" class="btn btn--type-1 arrow-animated">Голосовать<span class="icon icon-arrow-right"></span></a>
             </div>
           </div>
         </div>
@@ -187,7 +187,7 @@
             <h2>Кто станет официальным лицом премии «Банк года 2020»?</h2>
           </div>
 
-          <a href="/bg/voting-girls/" class="btn btn--type-2">Голосовать <span class="icon icon-arrow-right"></span></a>
+          <a href="/bg/voting-girls/" class="btn btn--type-2 arrow-animated">Голосовать <span class="icon icon-arrow-right"></span></a>
 
           <div class="gallery__controls">
             <button role="button" aria-label="Previous" class="glider-prev" id="glider-prev"><span
@@ -492,10 +492,10 @@
                 <a href="/bg/voting-girls/">Голосование</a>
               </li>
               <li>
-                <a href="">Итоги</a>
+                <a href="/bg/results/">Итоги</a>
               </li>
               <li>
-                <a href="/bg/infopartners/">Информационные партнеры</a>
+                <a href="/bg/infopartners/">Инфопартнеры</a>
               </li>
               <li>
                 <a href="/bg/contacts/">Контакты</a>
