--- a/infopartners/index.html
+++ b/infopartners/index.html
@@ -49,10 +49,10 @@
                 <a href="/bg/voting-girls/">Голосование</a>
               </li>
               <li>
-                <a href="">Итоги</a>
+                <a href="/bg/results/">Итоги</a>
               </li>
               <li class="active">
-                <a href="/bg/infopartners/">Информационные партнеры</a>
+                <a href="/bg/infopartners/">Инфопартнеры</a>
               </li>
               <li>
                 <a href="/bg/contacts/">Контакты</a>
@@ -71,7 +71,7 @@
           <div class="block-title__suptitle">
             Банк года 2020
           </div>
-          <h2>Инфопартнеры</h2>
+          <h1>Инфопартнеры</h1>
         </div>
         <div class="infopartners">
           <div class="infopartners__item">
@@ -298,10 +298,10 @@
                 <a href="/bg/voting-girls/">Голосование</a>
               </li>
               <li>
-                <a href="">Итоги</a>
+                <a href="/bg/results/">Итоги</a>
               </li>
               <li class="active">
-                <a href="/bg/infopartners/">Информационные партнеры</a>
+                <a href="/bg/infopartners/">Инфопартнеры</a>
               </li>
               <li>
                 <a href="/bg/contacts/">Контакты</a>
