--- a/rules/index.html
+++ b/rules/index.html
@@ -49,10 +49,10 @@
                 <a href="/bg/voting-girls/">Голосование</a>
               </li>
               <li>
-                <a href="">Итоги</a>
+                <a href="/bg/results/">Итоги</a>
               </li>
               <li>
-                <a href="/bg/infopartners/">Информационные партнеры</a>
+                <a href="/bg/infopartners/">Инфопартнеры</a>
               </li>
               <li>
                 <a href="/bg/contacts/">Контакты</a>
@@ -263,10 +263,10 @@
                 <a href="/bg/voting-girls/">Голосование</a>
               </li>
               <li>
-                <a href="">Итоги</a>
+                <a href="/bg/results/">Итоги</a>
               </li>
               <li>
-                <a href="/bg/infopartners/">Информационные партнеры</a>
+                <a href="/bg/infopartners/">Инфопартнеры</a>
               </li>
               <li>
                 <a href="/bg/contacts/">Контакты</a>
