add gallery and replace arrow icons

--- a/index.html
+++ b/index.html
@@ -353,17 +353,17 @@
                 <div class="media__content">
                   <div class="gallery">
                     <div class="glider-contain">
-                      <div class="glider" data-js='gallery'>
-                        <div><img data-src="./images/gallery/01.jpg" class="lazy" alt="img"></div>
-                        <div><img data-src="./images/gallery/02.jpg" class="lazy" alt="img"></div>
-                        <div><img data-src="./images/gallery/03.jpg" class="lazy" alt="img"></div>
-                        <div><img data-src="./images/gallery/04.jpg" class="lazy" alt="img"></div>
-                        <div><img data-src="./images/gallery/05.jpg" class="lazy" alt="img"></div>
-                        <div><img data-src="./images/gallery/06.jpg" class="lazy" alt="img"></div>
-                        <div><img data-src="./images/gallery/07.jpg" class="lazy" alt="img"></div>
-                        <div><img data-src="./images/gallery/08.jpg" class="lazy" alt="img"></div>
-                        <div><img data-src="./images/gallery/09.jpg" class="lazy" alt="img"></div>
-                        <div><img data-src="./images/gallery/10.jpg" class="lazy" alt="img"></div>
+                      <div class="glider" data-js='gallery' id="lightgallery">
+                        <a href="./images/gallery/01.jpg"><img data-src="./images/gallery/01.jpg" class="lazy" alt="img"></a>
+                        <a href="./images/gallery/02.jpg"><img data-src="./images/gallery/02.jpg" class="lazy" alt="img"></a>
+                        <a href="./images/gallery/03.jpg"><img data-src="./images/gallery/03.jpg" class="lazy" alt="img"></a>
+                        <a href="./images/gallery/04.jpg"><img data-src="./images/gallery/04.jpg" class="lazy" alt="img"></a>
+                        <a href="./images/gallery/05.jpg"><img data-src="./images/gallery/05.jpg" class="lazy" alt="img"></a>
+                        <a href="./images/gallery/06.jpg"><img data-src="./images/gallery/06.jpg" class="lazy" alt="img"></a>
+                        <a href="./images/gallery/07.jpg"><img data-src="./images/gallery/07.jpg" class="lazy" alt="img"></a>
+                        <a href="./images/gallery/08.jpg"><img data-src="./images/gallery/08.jpg" class="lazy" alt="img"></a>
+                        <a href="./images/gallery/09.jpg"><img data-src="./images/gallery/09.jpg" class="lazy" alt="img"></a>
+                        <a href="./images/gallery/10.jpg"><img data-src="./images/gallery/10.jpg" class="lazy" alt="img"></a>
                       </div>
 
                       <div class="glider__controls">
@@ -524,6 +524,12 @@
   <!-- Scripts for Slider -->
   <link rel="stylesheet" href="./plugins/gslider/glider.min.css">
   <script src="./plugins/gslider/glider.min.js"></script>
+
+    <!-- Scripts for Gallery -->
+    <link rel="stylesheet" href="./plugins/lightgallery/lightgallery.min.css">
+    <link rel="stylesheet" href="./plugins/lightgallery/lightgallery-custom.css">
+    <script src="./plugins/lightgallery/lightgallery.min.js"></script>
+    <script src="./plugins/lightgallery/lg-fullscreen.min.js"></script>
 
   <script src="./js/lazy-load.js"></script>
   <script src="./js/mobile-menu.js"></script>
