--- a/voting-girls/index.html
+++ b/voting-girls/index.html
@@ -402,9 +402,9 @@
                   <div class="registration__confirm-timer">
                     Отправить код повторно можно будет через 53 секунд
                   </div>
-                  <a href="#" class="registration__confirm-reset link-default link-default--underlined">
+                  <!-- <a href="#" class="registration__confirm-reset link-default link-default--underlined">
                     Отправить код повторно
-                  </a>
+                  </a> -->
                 </div>
               </form>
             </div>
