replase lint from logo

--- a/results/index.html
+++ b/results/index.html
@@ -15,7 +15,7 @@
     <section class="section-container section-container--header" id="fast-scroll-btn-switch-down">
       <div class="main-menu-container">
         <div class="logo">
-          <a href="/">
+          <a href="/bg/">
             <img data-src="../images/icons/logo.svg" class="lazy" alt="logo">
           </a>
           <div class="instagram hover-color-default">
@@ -281,7 +281,7 @@
     <section class="section-container section-container--footer">
       <li class="main-menu-container">
         <div class="logo">
-          <a href="/">
+          <a href="/bg/">
             <img data-src="../images/icons/logo.svg" class="lazy" alt="logo">
           </a>
         </div>
