--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@
         <div class="modal__close" data-js="modal-close">
           <span class="icon icon-close"></span>
         </div>
-        <div class="video-frame">
-          <iframe width="600" height="330" src="https://www.youtube.com/embed/WpU3X_ZeM_A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="video-frame" id="my_video">
+          <iframe width="600" height="330" src="https://www.youtube.com/embed/WpU3X_ZeM_A?enablejsapi=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
   </div>
