--- a/experts/index.html
+++ b/experts/index.html
@@ -71,7 +71,7 @@
           <div class="block-title__suptitle">
             Банк года 2020
           </div>
-          <h1>Голосование</h1>
+          <h1>Эксперты</h1>
         </div>
         <div class="voting-tiles" data-js="voting-container">
           <div class="voting-tiles__item">
@@ -81,16 +81,13 @@
                   <span class="icon icon-instagram"></span>
                 </a>
                 <div class="voting-tile__img">
-                  <img src="../images/girls/01.jpg" class="lazy" alt="img">
+                  <img src="../images/experts/expert1.png" class="lazy" alt="img">
                 </div>
-                <div class="voting-tile__text"><span>Куликовская Вероника</span></div>
+                <div class="voting-tile__text"><span>Expert Name</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes" data-votes='3'>голоса</div>
-                <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s" data-selected="" data-target="#registration" data-js="modal">
-                    <span>Отдать голос</span> <span class="icon icon-like"></span>
-                  </button>
+                <div class="voting-tile__controls-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, architecto expedita! Voluptatum at, dolor sit tenetur laudantium modi aperiam aut, illum vero in excepturi facere porro? Aperiam placeat at amet?
                 </div>
               </div>
             </div>
@@ -102,16 +99,13 @@
                   <span class="icon icon-instagram"></span>
                 </a>
                 <div class="voting-tile__img">
-                  <img src="../images/girls/02.jpg" class="lazy" alt="img">
+                  <img src="../images/experts/expert2.png" class="lazy" alt="img">
                 </div>
-                <div class="voting-tile__text"><span>Корчинская Алеся</span></div>
+                <div class="voting-tile__text"><span>Expert Name</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes" data-votes='3'>голоса</div>
-                <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s" data-selected="" data-target="#registration" data-js="modal">
-                    <span>Отдать голос</span> <span class="icon icon-like"></span>
-                  </button>
+                <div class="voting-tile__controls-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, architecto expedita! Voluptatum at, dolor sit tenetur laudantium modi aperiam aut, illum vero in excepturi facere porro? Aperiam placeat at amet?
                 </div>
               </div>
             </div>
@@ -123,16 +117,13 @@
                   <span class="icon icon-instagram"></span>
                 </a>
                 <div class="voting-tile__img">
-                  <img src="../images/girls/03.jpg" class="lazy" alt="img">
+                  <img src="../images/experts/expert3.png" class="lazy" alt="img">
                 </div>
-                <div class="voting-tile__text"><span>Черношей Каролина</span></div>
+                <div class="voting-tile__text"><span>Expert Name</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes" data-votes='3'>голоса</div>
-                <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s" data-selected="" data-target="#registration" data-js="modal">
-                    <span>Отдать голос</span> <span class="icon icon-like"></span>
-                  </button>
+                <div class="voting-tile__controls-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, architecto expedita! Voluptatum at, dolor sit tenetur laudantium modi aperiam aut, illum vero in excepturi facere porro? Aperiam placeat at amet?
                 </div>
               </div>
             </div>
@@ -144,16 +135,13 @@
                   <span class="icon icon-instagram"></span>
                 </a>
                 <div class="voting-tile__img">
-                  <img src="../images/girls/05.jpg" class="lazy" alt="img">
+                  <img src="../images/experts/expert1.png" class="lazy" alt="img">
                 </div>
-                <div class="voting-tile__text"><span>Тихонович кристина</span></div>
+                <div class="voting-tile__text"><span>Expert Name</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes" data-votes='3'>голоса</div>
-                <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s" data-selected="" data-target="#registration" data-js="modal">
-                    <span>Отдать голос</span> <span class="icon icon-like"></span>
-                  </button>
+                <div class="voting-tile__controls-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, architecto expedita! Voluptatum at, dolor sit tenetur laudantium modi aperiam aut, illum vero in excepturi facere porro? Aperiam placeat at amet?
                 </div>
               </div>
             </div>
@@ -165,16 +153,13 @@
                   <span class="icon icon-instagram"></span>
                 </a>
                 <div class="voting-tile__img">
-                  <img src="../images/girls/01.jpg" class="lazy" alt="img">
+                  <img src="../images/experts/expert1.png" class="lazy" alt="img">
                 </div>
-                <div class="voting-tile__text"><span>Куликовская Вероника</span></div>
+                <div class="voting-tile__text"><span>Expert Name</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes" data-votes='3'>голоса</div>
-                <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s" data-selected="" data-target="#registration" data-js="modal">
-                    <span>Отдать голос</span> <span class="icon icon-like"></span>
-                  </button>
+                <div class="voting-tile__controls-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, architecto expedita! Voluptatum at, dolor sit tenetur laudantium modi aperiam aut, illum vero in excepturi facere porro? Aperiam placeat at amet?
                 </div>
               </div>
             </div>
@@ -186,16 +171,13 @@
                   <span class="icon icon-instagram"></span>
                 </a>
                 <div class="voting-tile__img">
-                  <img src="../images/girls/02.jpg" class="lazy" alt="img">
+                  <img src="../images/experts/expert2.png" class="lazy" alt="img">
                 </div>
-                <div class="voting-tile__text"><span>Корчинская Алеся</span></div>
+                <div class="voting-tile__text"><span>Expert Name</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes" data-votes='3'>голоса</div>
-                <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s" data-selected="" data-target="#registration" data-js="modal">
-                    <span>Отдать голос</span> <span class="icon icon-like"></span>
-                  </button>
+                <div class="voting-tile__controls-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, architecto expedita! Voluptatum at, dolor sit tenetur laudantium modi aperiam aut, illum vero in excepturi facere porro? Aperiam placeat at amet?
                 </div>
               </div>
             </div>
@@ -207,16 +189,13 @@
                   <span class="icon icon-instagram"></span>
                 </a>
                 <div class="voting-tile__img">
-                  <img src="../images/girls/03.jpg" class="lazy" alt="img">
+                  <img src="../images/experts/expert3.png" class="lazy" alt="img">
                 </div>
-                <div class="voting-tile__text"><span>Черношей Каролина</span></div>
+                <div class="voting-tile__text"><span>Expert Name</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes" data-votes='3'>голоса</div>
-                <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s" data-selected="" data-target="#registration" data-js="modal">
-                    <span>Отдать голос</span> <span class="icon icon-like"></span>
-                  </button>
+                <div class="voting-tile__controls-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, architecto expedita! Voluptatum at, dolor sit tenetur laudantium modi aperiam aut, illum vero in excepturi facere porro? Aperiam placeat at amet?
                 </div>
               </div>
             </div>
@@ -228,16 +207,13 @@
                   <span class="icon icon-instagram"></span>
                 </a>
                 <div class="voting-tile__img">
-                  <img src="../images/girls/05.jpg" class="lazy" alt="img">
+                  <img src="../images/experts/expert1.png" class="lazy" alt="img">
                 </div>
-                <div class="voting-tile__text"><span>Тихонович кристина</span></div>
+                <div class="voting-tile__text"><span>Expert Name</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes" data-votes='3'>голоса</div>
-                <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s" data-selected="" data-target="#registration" data-js="modal">
-                    <span>Отдать голос</span> <span class="icon icon-like"></span>
-                  </button>
+                <div class="voting-tile__controls-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, architecto expedita! Voluptatum at, dolor sit tenetur laudantium modi aperiam aut, illum vero in excepturi facere porro? Aperiam placeat at amet?
                 </div>
               </div>
             </div>
