--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="">Номинации</a>
               </li>
               <li>
-                <a href="">Эксперты</a>
+                <a href="/bg/experts/">Эксперты</a>
               </li>
               <li>
                 <a href="/bg/voting-girls/">Голосование</a>
@@ -312,7 +312,7 @@
             </div>
           </div>
           <div class="experts__btn">
-            <a href="#" class="btn btn--type-1">Показать всех</a>
+            <a href="/bg/experts/" class="btn btn--type-1">Показать всех</a>
           </div>
         </div>
       </div>
@@ -486,7 +486,7 @@
                 <a href="">Номинации</a>
               </li>
               <li>
-                <a href="">Эксперты</a>
+                <a href="/bg/experts/">Эксперты</a>
               </li>
               <li>
                 <a href="/bg/voting-girls/">Голосование</a>
