--- a/results/index.html
+++ b/results/index.html
@@ -43,7 +43,7 @@
                 <a href="">Номинации</a>
               </li>
               <li>
-                <a href="">Эксперты</a>
+                <a href="/bg/experts/">Эксперты</a>
               </li>
               <li>
                 <a href="/bg/voting-girls/">Голосование</a>
@@ -295,7 +295,7 @@
                 <a href="">Номинации</a>
               </li>
               <li>
-                <a href="">Эксперты</a>
+                <a href="/bg/experts/">Эксперты</a>
               </li>
               <li>
                 <a href="/bg/voting-girls/">Голосование</a>
