--- a/contacts/index.html
+++ b/contacts/index.html
@@ -43,7 +43,7 @@
                 <a href="">Номинации</a>
               </li>
               <li>
-                <a href="">Эксперты</a>
+                <a href="/bg/experts/">Эксперты</a>
               </li>
               <li>
                 <a href="/bg/voting-girls/">Голосование</a>
@@ -259,7 +259,7 @@
                 <a href="">Номинации</a>
               </li>
               <li>
-                <a href="">Эксперты</a>
+                <a href="/bg/experts/">Эксперты</a>
               </li>
               <li>
                 <a href="/bg/voting-girls/">Голосование</a>
