--- a/rules/index.html
+++ b/rules/index.html
@@ -43,7 +43,7 @@
                 <a href="">Номинации</a>
               </li>
               <li>
-                <a href="">Эксперты</a>
+                <a href="/bg/experts/">Эксперты</a>
               </li>
               <li class="active">
                 <a href="/bg/voting-girls/">Голосование</a>
@@ -257,7 +257,7 @@
                 <a href="">Номинации</a>
               </li>
               <li>
-                <a href="">Эксперты</a>
+                <a href="/bg/experts/">Эксперты</a>
               </li>
               <li class="active">
                 <a href="/bg/voting-girls/">Голосование</a>
