add blocks animations

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </header>
   <main>
     <!-- Вступительный блок -->
-    <section class="section-container">
+    <section class="section-container animated-container">
       <div class="introduction">
         <div class="introduction__item">
           <div class="introductory-block">
@@ -118,7 +118,7 @@
       </div>
     </section>
     <!-- О премии -->
-    <section class="section-container">
+    <section class="section-container animated-container">
       <div class="container">
         <div class="infoblock">
           <div class="infoblock__container">
@@ -177,7 +177,7 @@
       </div>
     </section>
 
-    <div class="section-container">
+    <div class="section-container animated-container">
       <div class="gallery gallery--portrait">
         <div class="gallery__info-container">
           <div class="block-title block-title--white">
@@ -215,7 +215,7 @@
     </div>
 
     <!-- Номинации -->
-    <section class="section-container section-container--offset-small">
+    <section class="section-container section-container--offset-small animated-container">
       <div class="container">
         <div class="nominations">
           <div class="nominations__title">
@@ -254,7 +254,7 @@
     </section>
 
     <!-- Эксперты -->
-    <section class="section-container">
+    <section class="section-container animated-container">
       <div class="container">
         <div class="block-title">
           <div class="block-title__suptitle">
@@ -319,7 +319,7 @@
     </section>
 
     <!-- Галерея -->
-    <section class="section-container">
+    <section class="section-container animated-container">
       <div class="container">
         <div class="infoblock infoblock--invert-desk">
           <div class="infoblock__container">
@@ -426,7 +426,7 @@
     </div>
 
     <!-- Партнеры -->
-    <section class="section-container" id='fast-scroll-btn-switch-up'>
+    <section class="section-container animated-container" id='fast-scroll-btn-switch-up'>
       <div class="partners">
         <a href="" class="partners__item">
           <img data-src="./images/partners/partner1.svg" class="lazy" alt="icon">
@@ -469,7 +469,7 @@
   </main>
 
   <footer>
-    <section class="section-container section-container--footer">
+    <section class="section-container section-container--footer animated-container">
       <div class="main-menu-container">
         <div class="logo">
           <a href="/bg/">
@@ -534,6 +534,7 @@
   <script src="./js/lazy-load.js"></script>
   <script src="./js/mobile-menu.js"></script>
   <script src="./js/global.js"></script>
+  <script src="./js/container-animation.js"></script>
   <script src="./js/fast-scroll-btn.js"></script>
   <script src="./js/gallery.js"></script>
   <script src="./js/modal.js"></script>
