--- a/experts/index.html
+++ b/experts/index.html
@@ -65,7 +65,7 @@
   </header>
   <main>
     <!-- Голосование -->
-    <section class="section-container section-container--voting-tiles section-container--first">
+    <section class="section-container section-container--voting-tiles section-container--first animated-container">
       <div class="container">
         <div class="block-title">
           <div class="block-title__suptitle">
@@ -243,7 +243,7 @@
     </div>
 
     <!-- Партнеры -->
-    <section class="section-container" id='fast-scroll-btn-switch-up'>
+    <section class="section-container animated-container" id='fast-scroll-btn-switch-up'>
       <div class="partners">
         <a href="" class="partners__item">
           <img data-src="../images/partners/partner1.svg" class="lazy" alt="icon">
@@ -286,7 +286,7 @@
   </main>
 
   <footer>
-    <section class="section-container section-container--footer">
+    <section class="section-container section-container--footer animated-container">
       <div class="main-menu-container">
         <div class="logo">
           <a href="/bg/">
@@ -368,6 +368,7 @@
   <script src="../js/lazy-load.js"></script>
   <script src="../js/mobile-menu.js"></script>
   <script src="../js/global.js"></script>
+  <script src="../js/container-animation.js"></script>
   <script src="../js/voting-tiles.js"></script>
   <script src="../js/fast-scroll-btn.js"></script>
   <script src="../js/modal.js"></script>
