add voting page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="/bg/experts/">Эксперты</a>
               </li>
               <li>
-                <a href="/bg/voting-girls/">Голосование</a>
+                <a href="/bg/voting-banks/">Голосование</a>
               </li>
               <li>
                 <a href="/bg/results/">Итоги</a>
@@ -210,7 +210,6 @@
             <div><img data-src="./images/girls/01.jpg" class="lazy" alt="img"></div>
           </div>
         </div>
-
       </div>
     </div>
 
@@ -489,7 +488,7 @@
                 <a href="/bg/experts/">Эксперты</a>
               </li>
               <li>
-                <a href="/bg/voting-girls/">Голосование</a>
+                <a href="/bg/voting-banks/">Голосование</a>
               </li>
               <li>
                 <a href="/bg/results/">Итоги</a>
