--- a/infopartners/index.html
+++ b/infopartners/index.html
@@ -46,7 +46,7 @@
                 <a href="/bg/experts/">Эксперты</a>
               </li>
               <li>
-                <a href="/bg/voting-girls/">Голосование</a>
+                <a href="/bg/voting-banks/">Голосование</a>
               </li>
               <li>
                 <a href="/bg/results/">Итоги</a>
@@ -295,7 +295,7 @@
                 <a href="/bg/experts/">Эксперты</a>
               </li>
               <li>
-                <a href="/bg/voting-girls/">Голосование</a>
+                <a href="/bg/voting-banks/">Голосование</a>
               </li>
               <li>
                 <a href="/bg/results/">Итоги</a>
