--- a/results/index.html
+++ b/results/index.html
@@ -46,7 +46,7 @@
                 <a href="/bg/experts/">Эксперты</a>
               </li>
               <li>
-                <a href="/bg/voting-girls/">Голосование</a>
+                <a href="/bg/voting-banks/">Голосование</a>
               </li>
               <li class="active">
                 <a href="/bg/results/">Итоги</a>
@@ -298,7 +298,7 @@
                 <a href="/bg/experts/">Эксперты</a>
               </li>
               <li>
-                <a href="/bg/voting-girls/">Голосование</a>
+                <a href="/bg/voting-banks/">Голосование</a>
               </li>
               <li class="active">
                 <a href="/bg/results/">Итоги</a>
