--- a/rules/index.html
+++ b/rules/index.html
@@ -46,7 +46,7 @@
                 <a href="/bg/experts/">Эксперты</a>
               </li>
               <li class="active">
-                <a href="/bg/voting-girls/">Голосование</a>
+                <a href="/bg/voting-banks/">Голосование</a>
               </li>
               <li>
                 <a href="/bg/results/">Итоги</a>
@@ -260,7 +260,7 @@
                 <a href="/bg/experts/">Эксперты</a>
               </li>
               <li class="active">
-                <a href="/bg/voting-girls/">Голосование</a>
+                <a href="/bg/voting-banks/">Голосование</a>
               </li>
               <li>
                 <a href="/bg/results/">Итоги</a>
