--- a/voting-girls/index.html
+++ b/voting-girls/index.html
@@ -46,7 +46,7 @@
                 <a href="/bg/experts/">Эксперты</a>
               </li>
               <li class="active">
-                <a href="/bg/voting-girls/">Голосование</a>
+                <a href="/bg/voting-banks/">Голосование</a>
               </li>
               <li>
                 <a href="/bg/results/">Итоги</a>
@@ -354,7 +354,7 @@
                 <a href="/bg/experts/">Эксперты</a>
               </li>
               <li class="active">
-                <a href="/bg/voting-girls/">Голосование</a>
+                <a href="/bg/voting-banks/">Голосование</a>
               </li>
               <li>
                 <a href="/bg/results/">Итоги</a>
