link to nominations

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="/bg/rules/">Положение </a>
               </li>
               <li>
-                <a href="">Номинации</a>
+                <a href="#nominations" data-js="slow-scroll">Номинации</a>
               </li>
               <li>
                 <a href="/bg/experts/">Эксперты</a>
@@ -214,7 +214,7 @@
     </div>
 
     <!-- Номинации -->
-    <section class="section-container section-container--offset-small animated-container">
+    <section class="section-container section-container--offset-small animated-container" id="nominations">
       <div class="container">
         <div class="nominations">
           <div class="nominations__title">
@@ -482,7 +482,7 @@
                 <a href="/bg/rules/">Положение </a>
               </li>
               <li>
-                <a href="">Номинации</a>
+                <a href="#nominations">Номинации</a>
               </li>
               <li>
                 <a href="/bg/experts/">Эксперты</a>
